# URGENT_RiskManagementToolbox

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements-release.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yaml  task.md
.github/workflows/: branch-enforcement.yml  docker-build-verify.yml  python-test.yml  sync-dev-with-main.yml
benchmarks/: benchmark-info.txt  rastrigin_benchmark.json  run_benchmark.py  zdt1_benchmark.json
docs/: Urgent_Risk_management_toolbox.tex  Urgent_Risk_management_toolbox_old.tex
docs/chapters/: 010_Introduction.tex  020_Architecture.tex  030_Services.tex
docs/chapters/Architecture/: 010_HighLevel.tex  011_BuildingBlocks.tex  020_Services.tex  030_DataFlow.tex  030_WellManagementService.tex  040_SimulationService.tex  070_Orchestration.tex
docs/chapters/Services/: 010_WellManagementService.tex  020_SimulationService.tex  030_SolutionUpdaterService.tex  040_ProblemDispatcherService.tex
docs/content/drawio/: URGENT - system architecture.drawio
docs/content/services/: SimulationService.tex  SolutionUpdaterService.tex
docs/images/well_builder/: IO_and_process_diagram.drawio  curved_section.drawio  data_flow_diagram.drawio  linear_section.drawio
schemas/: 0.2.0.json
src/: main.py  utils.py
src/common/: __init__.py
src/common/models/: __init__.py  linear_inequalities.py  optimization.py
src/interfaces/: __init__.py  cli.py  common.py
src/logger/: __init__.py  logging.conf  logging_config.json  numeric_logger.py  orchestration_logger.py  process_logger.py  stream_reader.py  u_logger.py  utils.py
src/logger/orchestration_loggers/: server_logging.conf  worker_logging.conf
src/orchestration/risk_management_service/: __init__.py
src/orchestration/risk_management_service/core/: api.py
src/orchestration/risk_management_service/core/mappers/: __init__.py  control_vector_mapper.py
src/orchestration/risk_management_service/core/service/: __init__.py  risk_management_service.py
src/services/problem_dispatcher_service/: __init__.py
src/services/problem_dispatcher_service/core/: api.py
src/services/problem_dispatcher_service/core/builder/: __init__.py  builder.py
src/services/problem_dispatcher_service/core/models/: __init__.py  shared_from_solution_updater_service.py  shared_from_well_management.py  user.py
src/services/problem_dispatcher_service/core/service/: __init__.py  handlers.py  problem_dispatcher_service.py
src/services/problem_dispatcher_service/core/utils/: __init__.py  keys.py  utils.py
src/services/shared/: __init__.py  constrains.py  registered_services.py  validators.py
src/services/simulation_service/: __init__.py
src/services/simulation_service/core/: api.py  config.py  docker-compose.yml
src/services/simulation_service/core/connectors/: common.py  factory.py  open_darts.py  runner.py
src/services/simulation_service/core/connectors/conn_utils/: __init__.py  managed_subprocess.py  toml_utils.py
src/services/simulation_service/core/infrastructure/: _build_proto.py
src/services/simulation_service/core/infrastructure/proto/: simulation_messaging.proto
src/services/simulation_service/core/infrastructure/server/: Dockerfile.server
src/services/simulation_service/core/infrastructure/web_ui/: Dockerfile.webui  web_ui_requirements.txt
src/services/simulation_service/core/models/: __init__.py  shared_from_well_management.py  user.py
src/services/simulation_service/core/service/: __init__.py  cluster_manager.py  grpc_stub_manager.py  process_cluster_manager.py  simulation_cluster_manager.py  simulation_service.py  utils.py  web_ui_manager.py
src/services/simulation_service/core/utils/: converters.py
src/services/solution_updater_service/: __init__.py
src/services/solution_updater_service/core/: api.py
src/services/solution_updater_service/core/engines/: __init__.py  common.py  factory.py  pso.py
src/services/solution_updater_service/core/models/: __init__.py  user.py
src/services/solution_updater_service/core/service/: __init__.py  solution_updater_service.py
src/services/solution_updater_service/core/utils/: __init__.py  constraints.py  converters.py  type_checks.py
src/services/well_management_service/: __init__.py
src/services/well_management_service/core/: api.py
src/services/well_management_service/core/models/: __init__.py  perforation.py  point.py  trajectory.py  user.py  well.py
src/services/well_management_service/core/sections/: __init__.py  curved_well_section.py  linear_well_section.py  perforation_md_provider.py  section_interface.py
src/services/well_management_service/core/service/: __init__.py  well_builder.py  well_design_service.py  well_management_service.py
src/services/well_management_service/core/utilities/: constants.py
src/services/well_management_service/core/well_templates/: H_well_template.py  I_well_template.py  J_well_template.py  S_well_template.py  __init__.py  well_template_interface.py
src/services/well_management_service/utils/: _exceptions.py
src/web_ui/: Dockerfile.webui
tests/: conftest.py
tests/examples/: simple_test_case.json
tests/orchestration_test/: test_risk_management_service.py
tests/orchestration_test/mappers_test/: test_control_vector_mapper.py
tests/problem_dispatcher_service_test/: test_builder.py  test_constraints_expansion.py  test_models.py  test_problem_dispatcher_service.py  test_utils.py
tests/simulation_service_tests/: test_cluster.py  test_common.py  test_connectors.py  test_converters.py  test_factory.py  test_simulation_service.py
tests/solution_updater_service_test/: test_linear_inequalities.py  test_models.py  test_pso_mixed_constraints.py  test_pso_repair.py  test_solution_updater_service.py
tests/well_management_service_tests/: test_builder.py  test_models.py  test_sections.py  test_simulation_well_perforation_model.py  test_tools.py  test_well_management_service.py  tools.py  tools_test.py
(+9 files in other folders)
