[project]
name = "urgent-riskmanagementtoolbox"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.*"

[logging.output]
log_to_console = true
datetime_log_file = false
external_docker_log_console = true

[logging.config]
version = 1
disable_existing_loggers = false

[logging.config.formatters.detailed]
format = "%(asctime)s.%(msecs)03d %(module)s:%(lineno)d %(levelname)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[logging.config.formatters.simple]
format = "%(asctime)s.%(msecs)03d - %(module)-30s %(lineno)-4d - %(levelname)-8s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[logging.config.handlers.console]
class = "logging.StreamHandler"
level = "INFO"
formatter = "simple"
stream = "ext://sys.stdout"

[logging.config.handlers.file]
class = "logging.FileHandler"
level = "INFO"
formatter = "detailed"
encoding = "utf-8"
mode = "w"

["logging.config".loggers."aux"]
level = "INFO"
handlers = []
propagate = true

["logging.config".loggers."aux.console"]
level = "INFO"
handlers = []
propagate = true

["logging.config".loggers."threading-worker"]
level = "INFO"
handlers = []
propagate = true

["logging.config".loggers."threading-server"]
level = "DEBUG"
handlers = []
propagate = true

["logging.config".loggers."server"]
level = "INFO"
handlers = []
propagate = true

["logging.config".loggers."worker"]
level = "INFO"
handlers = []
propagate = true

[logging.config.root]
level = "INFO"
handlers = ["console", "file"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "src/logger/*",
    "src/main.py",
    "src/interfaces/*",
    "benchmarks/*",
    "*_pb2.py",
    "*_pb2_grpc.py",
    "_build_proto.py",
    "_test_.py",
    "*/worker/src/*",
    "*/server/src/*",
]
exclude_lines = [
    "if __name__ == '__main__':"
]

[tool.mypy]
mypy_path = "src"
files = ["src"]
ignore_missing_imports = true
allow_untyped_decorators = true
exclude = [
    "_grpc.py",
    "_pb2.py",
    "_pb2_grpc.py",
    "_model",
    "simulation_service.py",
    "_test_.py",
    "test_"
]

plugins = [
    "pydantic.mypy",
]

[tool.pytest.ini_options]
retries = 2
retry_delay = 0.5
pythonpath = "src"
log_file = "log/pytest_log.log"
log_file_format = "%(process)d %(thread)d %(asctime)s %(module)s:%(lineno)d %(levelname)s - %(message)s"
log_level = "INFO"

[toolbox-config]
simulation_timeout_seconds = 900

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
urgent-riskmanagementtoolbox = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.12.*"
grpcio = "==1.69.0"
grpcio-tools = "==1.69.0"
numpy = "==2.2.1"
psutil = ">=7.0.0"
pydantic = "==2.10.4"
scipy = "==1.15.2"
tomli = "==2.2.1"
pydantic-settings = ">=2.12.0,<3"

[tool.pixi.feature.dev.dependencies]
coverage = "==7.6.10"
mypy = "==1.15.0"
mypy-protobuf = ">=3.5"
pre-commit = "==4.0.1"
protoletariat = "==3.3.9"
pytest = "==8.3.4"
pytest-mypy = "==0.10.3"
pytest-retry = "==1.7.0"
ruff = "==0.14.14"


[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
grpcio = "==1.69.0"
grpcio-tools = "==1.69.0"
tomli = "==2.2.1"

[tool.pixi.feature.py310.pypi-dependencies]
open-darts = { path = "./src/services/simulation_service/core/infrastructure/worker/open_darts_whl/open_darts-1.1.3-cp310-cp310-linux_x86_64.whl" }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
worker = { features = ["py310"], solve-group = "worker", no-default-feature = true }

[tool.pixi.tasks]
clean-logs = { cmd = "python -c \"import shutil; shutil.rmtree('log', ignore_errors=True)\"" }
clean-orchestration = { cmd = "python -c \"import shutil; shutil.rmtree('orchestration_files', ignore_errors=True)\"" }
clean-htmlcov = { cmd = "python -c \"import shutil; shutil.rmtree('htmlcov', ignore_errors=True)\"" }
clean-all= { depends-on = ["clean-logs", "clean-orchestration", "clean-htmlcov"] }

mypy = { cmd = "mypy" }
ruff-fix = { cmd = "ruff check --fix ." }
ruff-format-check =  { cmd = "ruff format ." }

lint = { depends-on = ["ruff-fix", "ruff-format-check", "mypy"] }
